--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://kit.fontawesome.com/66ce4227d4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/index.css">   
+    <link rel="stylesheet" href="css/index.css.">   
    
     <title>Inscription</title>
 </head>
@@ -20,11 +20,27 @@
         </div>
     </nav>
     
+    <!-- BOUTONS -->
+
+    <p class="text">Nom</p>
+    <div class="boutons">
+        <input type="text" id="saisieTexte" name="saisieTexte">
+    </div>
+
+    <p class="text">Prenom</p>
+    <div class="boutons">
+        <input type="text" id="saisieTexte" name="saisieTexte">
+    </div>
+
+    <p class="text">Adresse mail</p>
+    <div class="boutons">
+        <input type="text" id="saisieTexte" name="saisieTexte">
+    </div>
 
 
 
 
-
+    <!-- FOOTER COLOR -->
 
     <div class="bottom-decoration">
         <div class="red"></div>
