--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
 <body>
     <nav class="c-navbar-top">
-        <div class="container text-center mr-auto">
-            <a class="nav-link nav-item">Inscription</a>
+    </nav>
+    
+    <nav class="nav2">
+        <div>
+            <img src="Logo_nws.png">
         </div>
     </nav>
     
@@ -37,8 +40,9 @@
         <input type="text" id="saisieTexte" name="saisieTexte">
     </div>
 
-
-
+    <div class="button-center">
+        <button class="btn text" type="button">Valider</button>
+    </div> 
 
     <!-- FOOTER COLOR -->
 
